<resources>
    <string name="app_name">Clockr</string>
    <string name="start_time_placeholder">00:00</string>
    <string name="label_placeholder">Label</string>
    <string name="description_placeholder">Description</string>
    <string name="icon_content_description">Circle showing Clocking tag colour.</string>
    <string name="duration_placeholder">0m</string>
    <string name="tag_placeholder">Clocking Tag</string>
    <string name="tag_name">Clocking Tag</string>
</resources>
